# edge-detector

./: .gitignore  CMakeLists.txt  Image.cpp  Image.hpp  main.cpp
